--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     
     <div class="chat-container">
         <header class="chat-header">
-            <span>🤖 ALI IA</span>
+            <span>🤖 ChatBot</span>
         </header>
         <div class="chat-messages" id="chat-messages">
             <div class="message bot-message">
